--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
+    <section class="header flexible-container">
+        <div class="half-width1">
+            <h1><span class="orange-color">Forget</span> Dieting,</h1>
+            <h1>Keep Yourself Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Just assume, You don't need to follow dieting chart because we provide healthy & delicious food for you!
+            </p>
+            <br>
+            <a href="#" target="_blank" class="anchor-button">Order Food</a>
+        </div>
+        <div class="half-width2">
+            <img src="images/header.png" alt="a lady with holding food item">
+        </div>
+    </section>
 
 </body>
 
