about section finished

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <section class="header flexible-container">
-        <div class="half-width1">
+        <div class="header-half-width1">
             <h1><span class="orange-color">Forget</span> Dieting,</h1>
             <h1>Keep Yourself Healthy</h1>
             <h1>With Food Network</h1>
@@ -24,10 +24,28 @@
             <br>
             <a href="#" target="_blank" class="anchor-button">Order Food</a>
         </div>
-        <div class="half-width2">
+        <div class="header-half-width2">
             <img src="images/header.png" alt="a lady with holding food item">
         </div>
     </section>
+    <section class="about flexible-container">
+        <div class="about-half-width1">
+            <img src="images/person image.png" alt="a smart lady">
+        </div>
+        <div class="about-half-width2">
+            <h1>About Me</h1>
+            <p>Hey, This is Laura Martin, an American chef & restaurateur.<br> Cooking is my love, my passion. I'm
+                passionate, dedicated & sincere<br> about my cooking. I tried to make thousand up recipes so far &
+                every<br>
+                items are delicious & were praised largely. You can taste those & I can<br>assure you a dietless,
+                healthy,
+                jolly life. </p>
+            <br><br>
+            <a href="#" target="_blank" class="anchor-button">Contact me</a>
+
+        </div>
+    </section>
+    <br><br>
 
 </body>
 
