recipe & footer done

--- a/index.html
+++ b/index.html
@@ -34,18 +34,48 @@
         </div>
         <div class="about-half-width2">
             <h1>About Me</h1>
-            <p>Hey, This is Laura Martin, an American chef & restaurateur.<br> Cooking is my love, my passion. I'm
-                passionate, dedicated & sincere<br> about my cooking. I tried to make thousand up recipes so far &
-                every<br>
-                items are delicious & were praised largely. You can taste those & I can<br>assure you a dietless,
-                healthy,
-                jolly life. </p>
+            <p>Hey, This is Laura Martin, an American chef & restaurateur.<br>Cooking is my love, my passion. I'm
+                passionate, dedicated & sincere<br>about my cooking. I tried to make thousand up recipes so far &
+                every<br>items are delicious & were praised largely. You can taste those & I can<br>assure you a
+                dietless,
+                healthy,jolly life.</p>
             <br><br>
             <a href="#" target="_blank" class="anchor-button">Contact me</a>
-
         </div>
     </section>
-    <br><br>
+    <section class="recipes">
+        <div class="recipes-heading">
+            <h1>My Recipies</h1>
+            <p>Here is a list of delicious recipies which are cooked by our <br>top class chef & they are well
+                behaved,dedicated & passionate at all</p>
+        </div>
+        <div class="recipes-area flexible-container">
+            <div class="recipes-item1">
+                <img src="images/recipe1.jpg" alt="">
+                <h2>Fried Mutton</h2>
+                <p>It's a mouthwatering item. If you try it once, you can't forget its taste. Here its cheap also.</p>
+            </div>
+            <div class="recipes-item2">
+                <img src="images/recipe2.png" alt="">
+                <h2>Delicious Thai Soup</h2>
+                <p>It's the most popular dish of this restaurant. Among various kind of soup, people love it.
+                </p>
+            </div>
+            <div class="recipes-item3">
+                <img src="images/recipe3.jpg" alt="">
+                <h2>Chicken Sandwitch</h2>
+                <p>Another popular item it is. Its spicy taste will make
+                    you feel like you should taste more and more.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h2>
+            <span class="orange-color">FOOD</span>
+            <span class="gray-color">NETWORK</span>
+        </h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy</p>
+    </footer>
 
 </body>
 
