social media section & contact section added

--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
         </div>
         <div class="about-half-width2">
             <h1>About Me</h1>
-            <p>Hey, This is Laura Martin, an American chef & restaurateur.<br>Cooking is my love, my passion. I'm
-                passionate, dedicated & sincere<br>about my cooking. I tried to make thousand up recipes so far &
-                every<br>items are delicious & were praised largely. You can taste those & I can<br>assure you a
-                dietless,
-                healthy,jolly life.</p>
+            <p>Hey, This is Laura Martin, an American chef & restaurateur.<br> Cooking is my love, my passion. I'm
+                passionate, dedicated & sincere<br> about my cooking. I tried to make thousand up recipes so far &
+                every<br> items are delicious & were praised largely. You can taste those & I can<br> assure you a
+                dietless, healthy, jolly life.</p>
             <br><br>
             <a href="#" target="_blank" class="anchor-button">Contact me</a>
         </div>
@@ -68,6 +67,30 @@
                     you feel like you should taste more and more.</p>
             </div>
         </div>
+    </section>
+    <section class="social-media flexible-container">
+        <div class="social-media-item1">
+            <h1>700K</h1>
+            <p>Youtube Subscribers</p>
+        </div>
+        <div class="social-media-item2">
+            <h1>2.4M</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="social-media-item3">
+            <h1>100K</h1>
+            <p>Dribbble Short Likes</p>
+        </div>
+    </section>
+    <section class="contact">
+        <h1>Get in <span class="orange-color">Touch</span></h1>
+        <h2>Need a Free Consultation?</h2>
+        <p>If you have any questions, please fill out the form,<br>we will call you back within five minutes.</p>
+        <form action="">
+            <input type="email" placeholder="Enter your Email"><br><br>
+            <input type="button" value="Send" class="anchor-button">
+        </form>
+
     </section>
     <footer>
         <h2>
