all changes done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -19,13 +18,15 @@
             <h1><span class="orange-color">Forget</span> Dieting,</h1>
             <h1>Keep Yourself Healthy</h1>
             <h1>With Food Network</h1>
-            <p>Just assume, You don't need to follow dieting chart because we provide healthy & delicious food for you!
+            <p>Just assume, You don't need to follow your dieting chart because we provide healthy & delicious food for
+                you!
             </p>
             <br>
-            <a href="#" target="_blank" class="anchor-button">Order Food</a>
+            <a href="https://www.linkedin.com/in/humayra-nur-ananna-9492791a1/" target="_blank"
+                class="link-button">Order Food</a>
         </div>
         <div class="header-half-width2">
-            <img src="images/header.png" alt="a lady with holding food item">
+            <img src="images/header.png" alt="a lady with holding a food item">
         </div>
     </section>
     <section class="about flexible-container">
@@ -34,37 +35,38 @@
         </div>
         <div class="about-half-width2">
             <h1>About Me</h1>
-            <p>Hey, This is Laura Martin, an American chef & restaurateur.<br> Cooking is my love, my passion. I'm
-                passionate, dedicated & sincere<br> about my cooking. I tried to make thousand up recipes so far &
-                every<br> items are delicious & were praised largely. You can taste those & I can<br> assure you a
+            <p>Hi! This is Laura Martin, an American chef & restaurateur.<br> Cooking is my love, my passion. I'm
+                passionate, dedicated & sincere<br> about my cooking. I tried to experiment thousand up recipes so far &
+                every<br> items were delicious & were praised largely. You can taste those & I can<br> assure you a
                 dietless, healthy, jolly life.</p>
             <br><br>
-            <a href="#" target="_blank" class="anchor-button">Contact me</a>
+            <a href="https://humayranurananna.github.io/Fokira-portfolio/" target="_blank" class="link-button">Contact
+                me</a>
         </div>
     </section>
     <section class="recipes">
-        <div class="recipes-heading">
+        <div class="recipes-title">
             <h1>My Recipies</h1>
             <p>Here is a list of delicious recipies which are cooked by our <br>top class chef & they are well
                 behaved,dedicated & passionate at all</p>
         </div>
-        <div class="recipes-area flexible-container">
+        <div class="flexible-container">
             <div class="recipes-item1">
-                <img src="images/recipe1.jpg" alt="">
+                <img src="images/recipe1.jpg" alt="Fried Mutton">
                 <h2>Fried Mutton</h2>
                 <p>It's a mouthwatering item. If you try it once, you can't forget its taste. Here its cheap also.</p>
             </div>
             <div class="recipes-item2">
-                <img src="images/recipe2.png" alt="">
+                <img src="images/recipe2.png" alt="Thai Soup">
                 <h2>Delicious Thai Soup</h2>
                 <p>It's the most popular dish of this restaurant. Among various kind of soup, people love it.
                 </p>
             </div>
             <div class="recipes-item3">
-                <img src="images/recipe3.jpg" alt="">
+                <img src="images/recipe3.jpg" alt="Chicken Sandwitch">
                 <h2>Chicken Sandwitch</h2>
-                <p>Another popular item it is. Its spicy taste will make
-                    you feel like you should taste more and more.</p>
+                <p>Another popular item it is. Its spicy taste will make you feel like you should taste more and more.
+                </p>
             </div>
         </div>
     </section>
@@ -83,14 +85,13 @@
         </div>
     </section>
     <section class="contact">
-        <h1>Get in <span class="orange-color">Touch</span></h1>
+        <h1>Get in <span class="pink-color">Touch</span></h1>
         <h2>Need a Free Consultation?</h2>
         <p>If you have any questions, please fill out the form,<br>we will call you back within five minutes.</p>
-        <form action="">
+        <form>
             <input type="email" placeholder="Enter your Email"><br><br>
-            <input type="button" value="Send" class="anchor-button">
+            <input type="button" value="SEND">
         </form>
-
     </section>
     <footer>
         <h2>
