--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+    <section class="menu">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Skill</li>
+            <li>Contact</li>
+        </ul>
+    </section>
     <section class="header flexible-container">
         <div class="header-half-width1">
             <h1><span class="orange-color">Forget</span> Dieting,</h1>
